# twich-api

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/twitchAPI/: __about__.py  _exceptions.py  _types.py  api_helix.py  auth.py  constants.py  twitch.py  utils.py
src/twitchAPI/models/: __init__.py  category.py  channels.py  content.py  streams.py
