[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitch-api"
dynamic = ["version"]
description = "The twitch api project provides a comprehensive set of endpoints to interact with Twitch's platform, enabling developers to integrate live streaming, user data, and chat functionalities into their applications."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "haaag", email = "81921095+haaag@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx==0.23.3",
  "pydantic==2.7.4",
  "python-dotenv",
  "tenacity==8.4.2",
]

[project.urls]
Documentation = "https://github.com/haaag/twitch-api#readme"
Issues = "https://github.com/haaag/twitch-api/issues"
Source = "https://github.com/haaag/twitch-api"

[tool.hatch.version]
path = "src/twitchAPI/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/twitchAPI"]

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/twitchaAPI tests}"

[tool.coverage.run]
source_pkgs = ["twitchAPI", "tests"]
branch = true
parallel = true
omit = ["src/twitchAPI/__about__.py"]

[tool.coverage.paths]
twitch = ["src/twitchAPI", "*/twitch-api/src/twitchAPI"]
tests = ["tests", "*/twitch-api/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
hide_error_codes = false
show_error_code_links = true
enable_error_code = ["ignore-without-code"]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
pretty = true
warn_no_return = true
warn_unused_ignores = true

[tool.ruff]
fix = false
line-length = 100
show-fixes = true
target-version = "py37"
exclude = [".venv", ".mypy_cache", ".pytest_cache"]

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
task-tags = ["HACK", "FIX", "BUG"]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
extend-select = [
  "B",   # (flake8-bugbear)
  "BLE", # (flake8-blind-except)
  "C4",  # (flake8-comprehensions)
  # "ERA",  # (eradicate)
  "I",   # (isort)
  "ICN", # (flake8-import-conventions)
  "INP", # (flake8-no-pep420)
  "N",   # (pep8-naming)
  "NPY", # (numpy-specific-rules)
  "PGH", # (pygrep-hooks)
  "PIE", # (flake8-pie)
  "PTH", # (flake8-use-pathlib)
  # "Q",   # (flake8-quotes)
  "RET", # (flake8-return)
  "RSE", # (flake8-raise)
  "RUF", # (ruff-specific-rules)
  "S",   # (flake8-bandit)
  "SIM", # (flake8-simplify)
  "T20", # (flake8-print)
  "TCH", # (flake8-type-checking)
  "TID", # (flake8-tidy-imports)
  "YTT", # (flake8-2020)
]
ignore = ["Q000", "Q003", "FBT001", "FBT002", "ARG002", "FBT003"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"src/twitchAPI/__about__.py" = ["I002"]
